# brailix

./: .gitattributes  ARCHITECTURE.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
brailix/: __main__.py  cli.py
brailix/backend/: __init__.py  _chars.py  _digits.py  _letters.py  block.py  dispatch.py  number.py  phonetic.py  punct.py
brailix/backend/ja/: __init__.py
brailix/backend/math/: __init__.py  chem.py  context.py  dispatch.py  utils.py
brailix/backend/math/handlers/: accents.py  fallback.py  fractions.py  leaves.py  matrices.py  scripts.py
brailix/backend/music/: __init__.py  context.py  utils.py
brailix/backend/music/handlers/: attributes.py  containers.py  direction.py  fallback.py  harmony.py  notations.py  notes.py
brailix/backend/zh/: __init__.py  pinyin_parser.py
brailix/backend/zh/tone/: __init__.py  basic.py  ncb_omission.py
brailix/core/: __init__.py  _xml.py  chars.py  context.py  defaults.py  errors.py  inline_math.py  protocols.py  registry.py  span.py
brailix/core/config/: profile.py  validator.py  zh_ncb_tables.py
brailix/core/config/loader/: __init__.py  math.py  music.py  zh.py
brailix/core/models/: paths.py
brailix/frontend/: __init__.py  _xml.py  normalize.py  segment.py
brailix/frontend/ja/analyzer/: __init__.py
brailix/frontend/ja/analyzer/adapters/: auto.py  fugashi.py  janome.py
brailix/frontend/math/: __init__.py  normalizer.py  registry.py  utils.py
brailix/frontend/math/adapters/: _atoms.py  chem.py  eq_field.py  latex.py  omml.py  script_cluster.py
brailix/frontend/math/adapters/mtef/: _mathml.py  _reader.py  _v5.py
brailix/frontend/music/: __init__.py  normalizer.py
brailix/frontend/music/adapters/: abc.py  midi.py  musicxml.py  mxl.py
brailix/frontend/zh/: __init__.py
brailix/frontend/zh/analyzer/: __init__.py
brailix/frontend/zh/analyzer/adapters/: _spans.py  auto.py  hanlp.py
brailix/frontend/zh/pinyin/: __init__.py  registry.py
brailix/frontend/zh/pinyin/adapters/: auto.py  g2pm.py  g2pw.py
brailix/input/: __init__.py  markdown.py  music_xml.py  plain.py
brailix/input/docx/: __init__.py  _blocks.py  _ole.py  _xml.py
brailix/ir/: braille.py  document.py  inline.py
brailix/pipeline/: __init__.py  _helpers.py  _results.py
brailix/profiles/: cn_current.json  cn_ncb.json  ja_current.json
brailix/renderer/: __init__.py  _page_digits.py  brf.py  cells.py  layout.py  unicode_braille.py
brailix/resources/: phonetic.json
brailix/resources/cn/current/: finals.json
brailix/resources/cn/current/math/: functions.json  structures.json  symbols.json
brailix/resources/music/instruments/: accordion.json  figured_bass.json  harp.json  keyboard.json  wind_percussion.json
docs/: api.md  cli.md  development.md  getting-started.md  index.md
tests/: test_deep_nesting_contract.py  test_public_api.py
tests/backend/: test_block.py  test_dispatch.py  test_math_chem.py  test_math_dispatch.py  test_math_errors.py  test_math_features.py  test_math_fractions.py  test_math_handlers.py  test_math_leaves.py  test_math_matrices.py  test_math_scripts.py  test_no_language_backend.py  test_nonstandard_chars.py  test_number.py  test_phonetic.py  test_punct.py  test_resource_consistency_guards.py
tests/backend/ja/: test_ja.py
tests/backend/music/: test_chord.py  test_direction.py  test_full_score.py  test_in_accord.py  test_intervals.py  test_lyrics.py  test_note_rest.py  test_note_type_tables.py  test_octave_inference.py  test_sound_navigation.py  test_staff_split.py  test_value_signs.py
tests/backend/zh/: test_pinyin_parser.py  test_zh.py  test_zh_exceptions.py  test_zh_tone_policy.py
tests/cli/: test_cli.py
tests/core/: test_config.py  test_config_music.py  test_config_validation.py  test_context.py  test_errors.py  test_inline_math.py  test_registry.py  test_span.py  test_xml.py
tests/core/models/: test_paths.py
tests/frontend/: test_normalize.py  test_phonetic_segment.py  test_segment.py  test_xml.py
tests/frontend/ja/: test_ja_analyzer.py  test_ja_wakachigaki.py
tests/frontend/math/: _mtef_builder.py  test_atoms.py  test_chem_adapter.py  test_eq_field_adapter.py  test_mathml_adapter.py  test_mtef_adapter.py  test_normalizer.py  test_omml_adapter.py  test_parse_math_tree.py  test_repeated_operators.py  test_script_cluster_adapter.py
tests/frontend/music/: test_normalizer.py  test_optional_adapters.py  test_parse_music_tree.py
tests/frontend/zh/analyzer/: test_auto_analyzer.py  test_char_analyzer.py  test_inline.py  test_jieba_adapter.py  test_list_analyzers.py  test_spans.py  test_thulac_adapter.py
tests/frontend/zh/pinyin/: test_auto_resolver.py  test_g2pm_adapter.py  test_g2pw_adapter.py  test_list_resolvers.py  test_user_dict.py
tests/golden/: conftest.py  test_goldens.py  test_imperative.py
tests/golden/data/: math_accents.json  math_big_ops.json  math_functions.json  math_primitives.json  math_structures.json  math_under_over.json  mixed.json  numbers.json  punctuation.json  warnings.json
tests/input/: test_docx.py  test_file.py  test_markdown.py  test_music_xml.py  test_plain.py
tests/integration/: test_braille_pipeline.py  test_document_pipeline.py  test_frontend_pipeline.py  test_language_seam.py  test_latex_braille_golden.py  test_math_pipeline.py  test_music_pipeline.py  test_pipeline_pinyin_auto.py  test_pipeline_render.py  test_translate_block.py
tests/ir/: test_braille.py  test_document.py  test_inline.py
tests/renderer/: test_cells.py  test_layout.py
